2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02526]
	* .cvsignore: add inflate mktable w3m w3mbookmark w3mhelperpanel
	   _zdmachdep.c
	* configure: 
	  pref_lang -> lang={JA|EN}
	  dcode -> display_code
	  scode -> system_code
	  remove save_params()
	  add def_param(), ask_choice() ask_param()
	  all confiration parameters can be read from config.param
	  s/DICT/USE_DICT/
	  s/BUFINFO/USE_BUFINFO/
	* fm.h: s/DICT/USE_DICT/
	* proto.h: ditto
	* doc/README.dict: ditto
	* doc-jp/README.dict: ditto
	* display.c: s/BUFINFO/USE_BUFINFO/
	* main.c: s/DICT/USE_DICT/ s/BUFINFO/USE_BUFINFO/

2001-11-24  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02523]
	* table.c (feed_table_tag): 
	  fix problem of anchor tag with name attribute only

2001-11-23  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02511]
	* terms.c (isWinConsole): added

2001-11-22  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02509] ([w3m-dev 02499] [w3m-dev 02508])
	* terms.c (setlinescols): initialize LASTLINE 
	* terms.c: add LASTLINE
	* fm.h: extern int LASTLINE
	* linein.c: remove defined(__CYGWIN__) && defined(JP_CHARSET)
	* main.c: remove MOUSE_* definition
	* terms.h: move MOUSE_* definition from main.c
	* terms.c: add tty
	* terms.c (check_win32_console): added
	* terms.c (init_win32_console_handle): ditto
	* terms.c (read_win32_console_input): ditto
	* terms.c (read_win32_console): ditto
	* terms.c (set_tty) add call init_win32_console
	* terms.c (getch) use read_win32_console
	* terms.c (mouse_init): check hConIn
	* terms.c (mouse_end): ditto

2001-11-22  aito@fw.ipsj.or.jp

	* [w3m-dev 02503]
	* indep.c (getescapechar): allow incomplete entity references in URL
	  closes: Debian Bug#120540

2001-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02506]
	* anchor.c (putHmarker): remove #ifdef __CYGWIN__ for bzero()
	* matrix.h (m_copy): ditto
	* table.c (pushTable): ditto

2001-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02505]